# nora

./: .gitignore  pyproject.toml  requirements.txt  robo_vla.py  robov_vla.py
nora/: __init__.py
nora/examples/: robo_vla.py
nora/experiments/bridge/: run_widowx.py
nora/inference/: __init__.py  nora.py
nora/training/: train.py
nora/training/datasets/: datasets.py
nora/training/datasets/rlds/: dataset.py
nora/training/datasets/rlds/oxe/: configs.py  materialize.py  transforms.py
nora/training/datasets/rlds/utils/: goal_relabeling.py  task_augmentation.py
